# indi

drivers/telescope/: lx200_lib_loader.cpp
indiserver/: indiserver.cpp  indiserver_lib.h
libcmake/: CMakeLists.txt  azgti.cpp  config.h  eqmod.cpp  indi_eqmod.xml  staradventurer2i.cpp  staradventurergti.cpp  test_mount.cpp  update_files.sh
libs/alignment/: MathPluginManagement.cpp  MathPluginManagerClient.cpp
libs/eventloop/: eventloop.c  eventloop.h
libs/indibase/: indidome.cpp  indidriverio.c  indidriverio.h  indidrivermain.c  indidrivermain.h  indigpsinterface.cpp  inditelescope.cpp  wordexp_alt.h
libs/indibase/connectionplugins/: ttybase.cpp
libs/indicore/: indicom.c  indicom.h
